# funbites

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/funbite/: checkpoint.py  interface.py  runtime.py  split.py  strategy.py  tools.py  vars.py
src/funbites/: debug.py  interface.py  runtime.py  simplify.py  split.py  strategy.py  vars.py  visit.py
tests/: test_checkpoint.py  test_simplify.py  test_split.py  test_tools.py  test_vars.py  test_visit.py
tests/test_simplify/: test_add_return.txt  test_add_return_to_if.txt  test_add_return_to_if_2.txt  test_expr.txt  test_expr_compare.txt  test_expr_operators.txt  test_for_transform.txt  test_no_add_return.txt  test_with_transform.txt
